SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 22/08/2006, version 0.22 (0.1.3, 0.2.5, 0.2.6, 0.0.5): roms
	- added full TiGroup support (sending only)

- 06/08/2006, version 0.21 (0.1.3, 0.2.5, 0.2.4, 0.0.5): roms
	- sending app without dirlist make TiLP crash: fixed
	- re-enabled 'local/full path' option
	- added option allowing to select behaviour of backup (old: backup/group, new: TiGroup)
	- fixed possible conflict between FLASH token & FLASH folder
	- preload FLASH files like single/group files (consistency)
	- renamed/cleaned-up tilp_slct.c functions
	- del_var: increase timeout due to garbage collecting
	- fixed timeout in send_flash, send_tigroup and del_var
	- 'Ready' reopens SilverLink device like DirectLink (the only way to clear error)
	- reworked selection system so that selection contains FileEntry with only _one_ VarEntry. Needed for future skip/retry/cancel dialog box
	- implemented Skip/Retry/Cancel dialog box when sending file/apps
	- fixed bug: file can be selected several times
	- fixed T. Evans' bug: fix path with save dialog
	- fixed Unbuntu Bug #49256 (reported as bug #1513271)

- 18/07/2006, version 0.20 (0.1.3, 0.2.4, 0.2.2, 0.0.5): roms
	- use ticalcs_probe instead of the previous code (easier & clearer)
	- added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite (kevin)
	- fixed bug #1523480: --no-gui doesn't work
	- fixed bug reported by "Andrew Haninger" <ahaning@gmail.com>: can't send TI85 backup
		from command line
	- fixed bug in the filename naming scheme
	- implemented Armand's suggestion: allow to directly input the path from keyboard

- 12/07/2006, version 0.19 (0.1.3, 0.2.3, 0.2.2, 0.0.5): roms
	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
	- suggestion of FTP83+: don't allow use of USB options is USB support is not available.

- 25/06/2006, version 0.18 (0.1.1, 0.2.2, 0.2.0, 0.0.4): roms