@@ -28,13 +28,14 @@
 */
 
 #ifdef __WIN32__
-# define TILP_VERSION "0.22"		// For Win32
+# define TILP_VERSION "0.23"		// For Win32
 #else
 # define TILP_VERSION VERSION
 #endif
-#define TILP_REQUIRES_LIBCONV_VERSION	"0.0.3"
-#define TILP_REQUIRES_LIBFILES_VERSION	"0.2.0"
-#define TILP_REQUIRES_LIBCABLES_VERSION	"0.1.0"
-#define TILP_REQUIRES_LIBCALCS_VERSION 	"0.2.4"
+
+#define TILP_REQUIRES_LIBCABLES_VERSION	"0.1.4"
+#define TILP_REQUIRES_LIBCALCS_VERSION 	"0.2.6"
+#define TILP_REQUIRES_LIBFILES_VERSION	"0.2.7"
+#define TILP_REQUIRES_LIBCONV_VERSION	"0.0.5"
 
 #endif
