@@ -2,6 +2,10 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
+- 26/08/2006, version 0.23 (0.1.4, 0.2.6, 0.2.7, 0.0.5): roms
+	- source code is frozen: entering in testing phase
+	- check return value of all tifiles_xxxx calls into TiLP
+
 - 22/08/2006, version 0.22 (0.1.3, 0.2.5, 0.2.6, 0.0.5): roms
 	- added full TiGroup support (sending only)
 
